add checkbox list implemntation in add work

--- a/public/src/stylus/add-work.styl
+++ b/public/src/stylus/add-work.styl
@@ -107,22 +107,6 @@
 				.inner
 					display flex
 
-.checkbox-list
-	max-height 200px
-	overflow auto
-	&__item
-		display flex
-		align-items center
-		padding .25rem
-		font-family 'Raleway'
-		cursor pointer
-		font-size .8rem
-		letter-spacing 1px
-		&:hover
-			background #eee
-		span
-			padding-left .25rem
-
 .radio-list
 	display flex
 	align-items center
@@ -130,3 +114,20 @@
 	font-size .8rem
 	label
 		padding-right .5rem
+
+
+// .checkbox-list
+// 	max-height 200px
+// 	overflow auto
+// 	&__item
+// 		display flex
+// 		align-items center
+// 		padding .25rem
+// 		font-family 'Raleway'
+// 		cursor pointer
+// 		font-size .8rem
+// 		letter-spacing 1px
+// 		&:hover
+// 			background #eee
+// 		span
+// 			padding-left .25rem
