--- a/public/css/works.css
+++ b/public/css/works.css
@@ -745,6 +745,38 @@ body {
   margin: 1rem 0.5rem;
   font-size: 0.9rem;
 }
+.checkbox-list {
+  max-height: 200px;
+  overflow: auto;
+}
+.checkbox-list__item {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  padding: 0.25rem;
+  font-family: 'Raleway';
+  cursor: pointer;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+}
+.checkbox-list__item[selected='true'] {
+  background: #eee;
+}
+.checkbox-list__item:hover {
+  background: #eee;
+}
+.checkbox-list__item span {
+  padding-left: 0.25rem;
+}
 .facebook-button {
   color: #fff;
   display: table-cell;
