--- a/public/css/single-work.css
+++ b/public/css/single-work.css
@@ -330,6 +330,23 @@ input[type="submit"] {
 .account-menu__item b {
   font-weight: 400;
 }
+.single-menu {
+  font-size: 0.9rem;
+  letter-spacing: 0.5px;
+  font-family: 'Roboto Condensed';
+}
+.single-menu__item {
+  display: table-cell;
+  padding: 0 0.5rem;
+  color: #aaa;
+  cursor: pointer;
+}
+.single-menu__item.selected {
+  color: #000;
+}
+.single-menu__item:not(:first-child) {
+  border-left: solid 1px #666;
+}
 .header {
   display: -webkit-box;
   display: -moz-box;
@@ -1213,10 +1230,6 @@ body {
   margin: auto;
   padding: 1rem 0;
 }
-.single-product__title {
-  text-align: center;
-  padding: 1rem;
-}
 .single-product__artist {
   font-family: 'Roboto Condensed';
   letter-spacing: 1px;
@@ -1233,38 +1246,29 @@ body {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -o-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  padding: 0 1rem;
+  padding: 0.5rem;
 }
 .single-product__artist .avatar {
-  max-width: 2.5rem;
   margin: 0 0.5em;
 }
 .single-product__artist .avatar img {
   -webkit-border-radius: 50%;
   border-radius: 50%;
 }
-.single-product__artist .name {
-  font-style: italic;
-}
-.single-product__info {
-  padding: 1rem 0;
-}
-.single-product__info max-width,
-.single-product__info__image {
-  padding: 0.5rem;
-}
-.single-product__info max-width img,
 .single-product__info__image img {
   width: auto;
   max-width: 100%;
   margin: auto;
   display: block;
+}
+.single-product__info__image p {
+  text-align: center;
+  padding: 1rem;
+}
+.single-product__info__data >p {
+  text-align: center;
+  padding: 0.5rem 1rem;
+  font-size: 1.75rem;
 }
 .single-product__info__data .actions {
   padding: 0.5rem;
@@ -1277,8 +1281,7 @@ body {
   text-transform: uppercase;
 }
 .single-product__info__data .actions .actions__social {
-  padding: 0 0.5rem;
-  padding-top: 1rem;
+  padding: 0.5rem;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -1351,6 +1354,31 @@ body {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
+.single-product__social {
+  display: table;
+  margin: auto;
+  padding: 0.5rem 1rem 1.5rem 1rem;
+}
+.single-product__more {
+  margin: 3rem 0;
+  background: #f6f6f6;
+  overflow: hidden;
+}
+.single-product__menu {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  padding: 0.5rem;
+  -webkit-box-pack: end;
+  -moz-box-pack: end;
+  -o-box-pack: end;
+  -ms-flex-pack: end;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
 .single-product__similar .actions-title {
   color: #444;
   font-family: 'Roboto Condensed';
@@ -1369,6 +1397,9 @@ body {
   -ms-flex: 1 50%;
   flex: 1 50%;
   padding: 0.5rem;
+}
+.double-columns {
+  background: #f6f6f6;
 }
 @media (min-width: 400px) {
   .more-image {
@@ -1441,5 +1472,25 @@ body {
     -webkit-flex: 1 50%;
     -ms-flex: 1 50%;
     flex: 1 50%;
+  }
+  .double-columns {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    -o-box-pack: justify;
+    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -o-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
   }
 }
