--- a/public/src/stylus/elements/menus.styl
+++ b/public/src/stylus/elements/menus.styl
@@ -29,8 +29,8 @@
 			background #f6f6f6
 			border-left 1px solid #eee
 			border-right 1px solid #eee
-			
-			
+
+
 /*------------------------------------*
 	$ SKINNY MENU
 *------------------------------------*/
@@ -52,7 +52,7 @@
 	&__avatar
 		padding 0 1rem
 		cursor pointer
-	
+
 .skinny-menu[data-icon='true']
 	.skinny-menu__item__text
 		display none
@@ -63,11 +63,11 @@
 			display inline
 		.skinny-menu__item__icon
 			display none
-			
+
 
 /*------------------------------------*
 	$ SQUARE-MENU
-*------------------------------------*/	
+*------------------------------------*/
 .square-menu-container
 	height 3.5rem
 	overflow hidden
@@ -95,7 +95,7 @@
 			margin-left .5rem
 		&:not(:last-child)
 			margin-right .5rem
-			
+
 
 /*------------------------------------*
 	$ ACCOUNT-MENU
@@ -122,4 +122,21 @@
 			// background #eee
 			color black
 		b
-			font-weight 400	
+			font-weight 400
+
+/*------------------------------------*
+	$ SINGLE-MENU
+*------------------------------------*/
+.single-menu
+	font-size .9rem
+	letter-spacing .5px
+	font-family 'Roboto Condensed'
+	&__item
+		display table-cell
+		padding 0 .5rem
+		color #aaa
+		cursor pointer
+		&.selected
+			color #000
+		&:not(:first-child)
+			border-left solid 1px #666
