--- a/public/src/stylus/single-work.styl
+++ b/public/src/stylus/single-work.styl
@@ -8,7 +8,7 @@
 *------------------------------------*/
 str(x)
 	return '' + unit(x, '')
-	
+
 @import 'elements/buttons.styl'
 
 @import 'objects/products.styl'
@@ -22,37 +22,45 @@ str(x)
 	// padding 1rem .5rem
 	padding 1rem 0
 
-	&__title
-		text-align center
-		padding 1rem
-		
+	// &__title
+	// 	text-align center
+	// 	padding 1rem
+
 	&__artist
 		font-family 'Roboto Condensed'
 		letter-spacing 1px
 		font-size 1.15rem
 		display flex
 		align-items center
-		justify-content center
-		padding 0 1rem
+		// justify-content center
+		padding .5rem
 		.avatar
-			max-width 2.5rem
+			// max-width 2.5rem
 			margin 0 .5em
 			img
 				border-radius 50%
-		.name
-			font-style italic
-				
+		// .name
+		// 	font-style italic
+
 	&__info
-		padding 1rem 0
-		max-width
+		// padding 1rem 0
+		// max-width
 		&__image
-			padding .5rem
+			// padding .5rem
 			img
 				width auto
 				max-width 100%
 				margin auto
 				display block
+			p
+				text-align center
+				padding 1rem
+				// padding .75rem
 		&__data
+			>p
+				text-align center
+				padding .5rem 1rem
+				font-size 1.75rem
 			.actions
 				padding .5rem
 				.actions__title
@@ -62,8 +70,8 @@ str(x)
 					font-size 1rem
 					text-transform uppercase
 				.actions__social
-					padding 0 .5rem
-					padding-top 1rem
+					padding .5rem
+					// padding-top 1rem
 					display flex
 					justify-content space-between
 					align-items center
@@ -88,7 +96,23 @@ str(x)
 				.actions__more
 					display flex
 					flex-wrap wrap
-	
+
+	&__social
+		display table
+		margin auto
+		padding .5rem 1rem 1.5rem 1rem
+		// padding 1rem
+
+	&__more
+		margin 3rem 0
+		background #f6f6f6
+		overflow: hidden;
+
+	&__menu
+		display: flex;
+		padding: 0.5rem;
+		justify-content: flex-end;
+
 	&__similar
 		.actions-title
 			color #444
@@ -102,7 +126,12 @@ str(x)
 .more-image
 	flex 1 50%
 	padding .5rem
-										
+
+
+.double-columns
+	background #f6f6f6
+
+
 @media (min-width: 400px)
 	.more-image
 		flex 1 33.333%
@@ -127,3 +156,8 @@ str(x)
 					margin .5rem 1rem
 	.more-image
 		flex 1 50%
+
+	.double-columns
+		display flex
+		justify-content space-between
+		align-items center
