--- a/public/src/stylus/single-work.styl
+++ b/public/src/stylus/single-work.styl
@@ -29,7 +29,7 @@ str(x)
 	&__artist
 		font-family 'Roboto Condensed'
 		letter-spacing 1px
-		font-size 1.15rem
+		// font-size 1.15rem
 		display flex
 		align-items center
 		// justify-content center
@@ -39,8 +39,14 @@ str(x)
 			margin 0 .5em
 			img
 				border-radius 50%
-		// .name
-		// 	font-style italic
+		.info
+			.name
+				font-size 1.25rem
+			.info
+				display flex
+				align-items center
+				button
+					margin .5rem
 
 	&__info
 		// padding 1rem 0
@@ -103,6 +109,36 @@ str(x)
 		padding .5rem 1rem 1.5rem 1rem
 		// padding 1rem
 
+	&__manifest
+		font-family: "Roboto Condensed";
+		font-weight: 300;
+		letter-spacing: 1px;
+		font-size: .9rem;
+		padding .5rem .75rem
+		.title
+			color: #585858;
+			font-weight 600
+			// margin-tpo 1rem
+			text-transform: uppercase;
+			margin-top 1rem
+			font-size 1.15rem
+		p
+			padding .25rem
+		.people
+			display flex
+			flex-wrap wrap
+			// justify-content center
+			// padding 0 .4rem
+			// padding-bottom .5rem
+			padding .25rem 0
+			.people-item
+				// padding .1rem
+				padding .25rem
+				img
+					width 2.25rem
+					height 2.25rem
+					border-radius 50%
+
 	&__more
 		margin 3rem 0
 		background #f6f6f6
@@ -114,6 +150,7 @@ str(x)
 		justify-content: flex-end;
 
 	&__similar
+		padding .5rem 0
 		.actions-title
 			color #444
 			font-family 'Roboto Condensed'
@@ -130,6 +167,7 @@ str(x)
 
 .double-columns
 	background #f6f6f6
+	padding: .5rem 0;
 
 
 @media (min-width: 400px)
