--- a/public/css/single-work.css
+++ b/public/css/single-work.css
@@ -1557,4 +1557,21 @@ body {
     -webkit-align-items: center;
     align-items: center;
   }
+  .my-row {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+  }
+  .my-row .my-column {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+  }
 }
