--- a/public/src/stylus/single-work.styl
+++ b/public/src/stylus/single-work.styl
@@ -199,3 +199,8 @@ str(x)
 		display flex
 		justify-content space-between
 		align-items center
+
+	.my-row
+		display flex
+		.my-column
+			flex 1
