new single product design

--- a/app/views/partials/single-work.html
+++ b/app/views/partials/single-work.html
@@ -36,8 +36,7 @@
 				<span class="name">{{work.User.firstname}} {{work.User.lastname}}</span>
 				<div class="info">
 					<p class="city skinny-text" data-color='light'><i class="fa fa-map-marker"></i> Lima</p>
-					<button class="button-liner disabled js-followButton" data-size="small" data-following="true" data-userId="{{ profile.id }}">
-					<!-- <button class="button-liner js-followButton" data-size="small" data-following="false" data-userId="{{ profile.id }}"> -->
+					<button class="button-liner js-followButton" data-size="small" data-following="false" data-userId="{{ profile.id }}">
 						<span class="button-liner__action folllow">Seguir</span>
 						<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
 						<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
@@ -89,8 +88,6 @@
 	</div>
 
 	<div class="single-product__more">
-
-		<!-- <p class="single-product-text">Mas arte</p> -->
 
 		<div class="single-product__similar">
 			<p class="actions-title">Mas arte del autor</p>
