--- a/public/src/stylus/objects/products.styl
+++ b/public/src/stylus/objects/products.styl
@@ -13,6 +13,7 @@
 	border 1px solid #ddd
 	position relative
 	transition box-shadow ease-in-out 125ms
+	background white
 	// &:hover
 	// 	box-shadow rgba(0,0,0,0.35) 0 0 10px
 	.product-image
@@ -117,6 +118,13 @@ product-width = 180px
 		.product-wrapper
 			flex 1 20%
 			max-width 20%
+
+	.products.no-filters
+		.product-wrapper
+			flex 1 20%
+			max-width 20%
+			// flex 1 16.666%
+			// max-width 16.666%
 
 
 	// .products.moveLeft.moveRight
