--- a/public/stylus-org/single-product.styl
+++ b/public/stylus-org/single-product.styl
@@ -14,6 +14,9 @@
 @import 'objects/footer.styl'
 
 
+body
+	background red
+
 .single-product
 	max-width max-width
 	margin auto
@@ -23,7 +26,7 @@
 	&__title
 		text-align center
 		padding .5rem
-		
+
 	&__artist
 		font-family 'Roboto Condensed'
 		letter-spacing 1px
@@ -39,7 +42,7 @@
 				border-radius 50%
 		.name
 			font-style italic
-				
+
 	&__info
 		padding 1rem 0
 		max-width
@@ -73,15 +76,15 @@
 							height 2.25rem
 							border-radius 50%
 							// margin .5rem
-					
+
 			// .people
 			// 	padding .25rem
 			// 	justify-content center
 			// 		margin .25rem
 			// 		img
 			// 			border-radius 50%
-				
-										
+
+
 @media (min-width: tablet)
 	.single-product
 		&__header
@@ -105,4 +108,3 @@
 				// 	border solid 1px #ccc
 				// 	margin .5rem
 				// 	padding .5rem
-				// 	
