--- a/app/views/partials/single-product.html
+++ b/app/views/partials/single-product.html
@@ -3,26 +3,13 @@
 ********************************************************************* -->
 <div class="single-product">
 
-	<div class="single-product__header">
-		
-		<div class="single-product__title">
-			<p class="single-product-text">{{product.name}}</p>
-		</div>
-
-		<div class="single-product__artist">
-			from
-			<span class="avatar"><img src="{{product.User.photo}}"></span>
-			<span class="name">{{product.User.firstname}} {{product.User.lastname}}</span>
-		</div>
-
-	</div>
-
 	<div class="single-product__info">
-		
+
 		<figure class="single-product__info__image">
 			<img src="{{product.photo}}">
+			<p class="single-product-text">{{product.name}}</p>
 		</figure>
-		
+
 		<div class="single-product__info__data">
 			<div class="actions">
 				<div class="actions__social">
@@ -45,12 +32,174 @@
 					<span class="price">S/.{{product.price}}</span>
 
 				</div>
-				
+
 				<div class="actions__buy">
 					<a href="/checkout/{{product.nameSlugify}}" class="button-solid" data-size='large' data-color='red' data-expand='true'>Comprar</a>
 				</div>
 			</div>
-			<div class="actions">
+		</div>
+
+	</div>
+
+	<div class="double-columns">
+
+		<div class="single-product__artist">
+			<span class="avatar"><img src="{{product.User.photo}}"></span>
+			<div class="info">
+				<span class="name">{{product.User.firstname}} {{product.User.lastname}}</span>
+				<div class="info">
+					<p class="city skinny-text" data-color='light'><i class="fa fa-map-marker"></i> Lima</p>
+					<button class="button-liner js-followButton" data-size="small" data-following="false" data-userId="{{ profile.id }}">
+						<span class="button-liner__action folllow">Seguir</span>
+						<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
+						<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
+						<span class="button-liner__number">20</span>
+					</button>
+				</div>
+			</div>
+		</div>
+
+		<div class="single-product__menu">
+			<ul class="single-menu">
+				<li class="single-menu__item selected">Manifiesto</li>
+				<li class="single-menu__item">Productos</li>
+				<li class="single-menu__item">Comentarios</li>
+			</ul>
+		</div>
+
+	</div>
+
+	<div class="single-product__manifest">
+		<p class="title">Manifiesto</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+		<div class="my-row">
+			<div class="my-column">
+				<p class="title">tags</p>
+				<p>holi, boli, crayoli</p>
+			</div>
+			<div class="my-column">
+				<p class="title">Comunidad</p>
+				<div class="people">
+					<div class="people-item"><img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg"></div>
+					<div class="people-item"><img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg"></div>
+					<div class="people-item"><img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg"></div>
+					<div class="people-item"><img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg"></div>
+					<div class="people-item"><img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg"></div>
+					<div class="people-item"><img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg"></div>
+					{% for userLike in product.userLikes %}
+						<div class="people-item"><img src="{{userLike.photo}}"></div>
+					{% endfor %}
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="single-product__more">
+		<div class="single-product__similar">
+			<p class="actions-title">Mas Productos</p>
+			<section class="products no-filters">
+				{% for i in [0,1,2,3,4,5] %}
+					<div class="product-wrapper">
+						<article class="product">
+
+							<div class="product-image">
+								<img src="{{ similar[i].photo }}">
+								<div class="cover">
+									<i class="fa fa-heart {% if similar[i].liked %}active{% endif %}"></i>
+									<i class="fa fa-th-list"></i>
+								</div>
+							</div>
+
+							<div class="product-title">
+								<div class="title">{{similar[i].name}}</div>
+							</div>
+							<div class="product-info">
+								<div class="price">s./{{similar[i].price}}</div>
+
+								<div class="users">
+									<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
+									<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
+									<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
+								</div>
+
+								<div class="like">
+									<span class="button-like {% if similar[i].liked %}active{% endif %}"> <i class="fa fa-heart"></i><i class="fa fa-heart-o"></i> <span>{{similar[i].likes}}</span> </span>
+								</div>
+
+								<div class="wish-list">
+									<span class="button-wish-list"> <i class="fa fa-check-square-o"></i></span>
+								</div>
+							</div>
+						</article>
+					</div>
+				{% endfor %}
+			</section>
+		</div>
+		<div class="single-product__similar">
+			<p class="actions-title">Productos similares</p>
+			<section class="products no-filters">
+				{% for i in [0,1,2,3,4,5] %}
+					<div class="product-wrapper">
+						<article class="product">
+
+							<div class="product-image">
+								<img src="{{ similar[i].photo }}">
+								<div class="cover">
+									<i class="fa fa-heart {% if similar[i].liked %}active{% endif %}"></i>
+									<i class="fa fa-th-list"></i>
+								</div>
+							</div>
+
+							<div class="product-title">
+								<div class="title">{{similar[i].name}}</div>
+							</div>
+							<div class="product-info">
+								<div class="price">s./{{similar[i].price}}</div>
+
+								<div class="users">
+									<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
+									<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
+									<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
+								</div>
+
+								<div class="like">
+									<span class="button-like {% if similar[i].liked %}active{% endif %}"> <i class="fa fa-heart"></i><i class="fa fa-heart-o"></i> <span>{{similar[i].likes}}</span> </span>
+								</div>
+
+								<div class="wish-list">
+									<span class="button-wish-list"> <i class="fa fa-check-square-o"></i></span>
+								</div>
+							</div>
+						</article>
+					</div>
+				{% endfor %}
+			</section>
+		</div>
+	</div>
+
+</div>
+
+	<!-- <div class="single-product__header">
+
+		<div class="single-product__title">
+			<p class="single-product-text">{{product.name}}</p>
+		</div>
+
+		<div class="single-product__artist">
+			from
+			<span class="avatar"><img src="{{product.User.photo}}"></span>
+			<span class="name">{{product.User.firstname}} {{product.User.lastname}}</span>
+		</div>
+
+	</div> -->
+
+			<!-- <div class="actions">
 				<p class="actions__title">Comunidad</p>
 				<div class="actions__people">
 					<div class="people-item"><img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg"></div>
@@ -63,8 +212,8 @@
 						<div class="people-item"><img src="{{userLike.photo}}"></div>
 					{% endfor %}
 				</div>
-			</div>
-			<div class="actions">
+			</div> -->
+			<!-- <div class="actions">
 				<p class="actions__title">Mas del artista</p>
 				<div class="actions__more">
 					{% for product in more %}
@@ -73,46 +222,13 @@
 						</a>
 					{% endfor %}
 				</div>
-			</div>
-		</div>
-
-	</div>
-
-	<div class="single-product__similar">
-		<p class="actions-title">Productos similares</p>
-		
-		<section class="products">
-			{% for product in similar %}
-			<div class="product-wrapper">
-				<article class="product">
-					<a class="product-image" href="/{{ product.User.username}}/product/{{product.nameSlugify}}">
-						<img src="{{ product.photo }}">
-					</a>
-					<div class="product-title">
-						<div class="title">{{product.name}}</div>
-					</div>
-					<div class="product-info">
-						<div class="price">s./{{product.price}}</div>
-						<div class="like">
-							<span class="button-like"> <i class="fa fa-heart-o"></i> <span>{{product.getDataValue('likes')}}</span> </span>
-						</div>
-						<div class="wish-list">
-							<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
-						</div>
-					</div>
-				</article>
-			</div>
-			{% endfor %}
-		</section>
-	</div>
-
-</div>
+			</div> -->
 
 	<!-- ********************************************************************
 			$ PRODUCTS
 		********************************************************************* -->
 		<!-- <p>Mas productos</p>
-		
+
 		<section class="products">
 			{% for product in more %}
 			<div class="product-wrapper">
