--- a/public/css/single-product.css
+++ b/public/css/single-product.css
@@ -719,6 +719,7 @@ body {
   -o-transition: box-shadow ease-in-out 125ms;
   -ms-transition: box-shadow ease-in-out 125ms;
   transition: box-shadow ease-in-out 125ms;
+  background: #fff;
 }
 .product .product-image {
   position: relative;
@@ -905,6 +906,16 @@ body {
     max-width: 25%;
   }
   .products.moveLeft .product-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 20%;
+    -ms-flex: 1 20%;
+    flex: 1 20%;
+    max-width: 20%;
+  }
+  .products.no-filters .product-wrapper {
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
     -o-box-flex: 1;
@@ -1119,14 +1130,9 @@ body {
   margin: auto;
   padding: 1rem 0;
 }
-.single-product__title {
-  text-align: center;
-  padding: 1rem;
-}
 .single-product__artist {
   font-family: 'Roboto Condensed';
   letter-spacing: 1px;
-  font-size: 1.15rem;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -1139,38 +1145,49 @@ body {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -o-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  padding: 0 1rem;
+  padding: 0.5rem;
 }
 .single-product__artist .avatar {
-  max-width: 2.5rem;
   margin: 0 0.5em;
 }
 .single-product__artist .avatar img {
   -webkit-border-radius: 50%;
   border-radius: 50%;
 }
-.single-product__artist .name {
-  font-style: italic;
+.single-product__artist .info .name {
+  font-size: 1.25rem;
 }
-.single-product__info {
-  padding: 1rem 0;
+.single-product__artist .info .info {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
-.single-product__info max-width,
-.single-product__info__image {
-  padding: 0.5rem;
+.single-product__artist .info .info button {
+  margin: 0.5rem;
 }
-.single-product__info max-width img,
 .single-product__info__image img {
   width: auto;
   max-width: 100%;
   margin: auto;
   display: block;
+}
+.single-product__info__image p {
+  text-align: center;
+  padding: 1rem;
+}
+.single-product__info__data >p {
+  text-align: center;
+  padding: 0.5rem 1rem;
+  font-size: 1.75rem;
 }
 .single-product__info__data .actions {
   padding: 0.5rem;
@@ -1183,8 +1200,7 @@ body {
   text-transform: uppercase;
 }
 .single-product__info__data .actions .actions__social {
-  padding: 0 0.5rem;
-  padding-top: 1rem;
+  padding: 0.5rem;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -1257,6 +1273,75 @@ body {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
+.single-product__social {
+  display: table;
+  margin: auto;
+  padding: 0.5rem 1rem 1.5rem 1rem;
+}
+.single-product__manifest {
+  font-family: "Roboto Condensed";
+  font-weight: 300;
+  letter-spacing: 1px;
+  font-size: 0.9rem;
+  padding: 0.5rem 0.75rem;
+}
+.single-product__manifest .title {
+  color: #585858;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-top: 1rem;
+  font-size: 1.15rem;
+}
+.single-product__manifest p {
+  padding: 0.25rem;
+}
+.single-product__manifest .people {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0.25rem 0;
+}
+.single-product__manifest .people .people-item {
+  padding: 0.25rem;
+}
+.single-product__manifest .people .people-item img {
+  width: 2.25rem;
+  height: 2.25rem;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
+.single-product__more {
+  margin: 3rem 0;
+  background: #f6f6f6;
+  overflow: hidden;
+}
+.single-product__menu {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  padding: 0.5rem;
+  -webkit-box-pack: end;
+  -moz-box-pack: end;
+  -o-box-pack: end;
+  -ms-flex-pack: end;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.single-product__similar {
+  padding: 0.5rem 0;
+}
 .single-product__similar .actions-title {
   color: #444;
   font-family: 'Roboto Condensed';
@@ -1275,6 +1360,10 @@ body {
   -ms-flex: 1 50%;
   flex: 1 50%;
   padding: 0.5rem;
+}
+.double-columns {
+  background: #f6f6f6;
+  padding: 0.5rem 0;
 }
 @media (min-width: 400px) {
   .more-image {
@@ -1347,5 +1436,42 @@ body {
     -webkit-flex: 1 50%;
     -ms-flex: 1 50%;
     flex: 1 50%;
+  }
+  .double-columns {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    -o-box-pack: justify;
+    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -o-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .my-row {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+  }
+  .my-row .my-column {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
   }
 }
