--- a/public/src/stylus/single-product.styl
+++ b/public/src/stylus/single-product.styl
@@ -7,44 +7,57 @@
 
 @import 'objects/products.styl'
 
-
 .single-product
 	max-width max-width
 	margin auto
 	// padding 1rem .5rem
 	padding 1rem 0
 
-	&__title
-		text-align center
-		padding 1rem
+	// &__title
+	// 	text-align center
+	// 	padding 1rem
 
 	&__artist
 		font-family 'Roboto Condensed'
 		letter-spacing 1px
-		font-size 1.15rem
+		// font-size 1.15rem
 		display flex
 		align-items center
-		justify-content center
-		padding 0 1rem
+		// justify-content center
+		padding .5rem
 		.avatar
-			max-width 2.5rem
+			// max-width 2.5rem
 			margin 0 .5em
 			img
 				border-radius 50%
-		.name
-			font-style italic
+		.info
+			.name
+				font-size 1.25rem
+			.info
+				display flex
+				align-items center
+				button
+					margin .5rem
 
 	&__info
-		padding 1rem 0
-		max-width
+		// padding 1rem 0
+		// max-width
 		&__image
-			padding .5rem
+			// padding .5rem
 			img
 				width auto
 				max-width 100%
 				margin auto
 				display block
+			p
+				text-align center
+				padding 1rem
+				// padding .75rem
 		&__data
+			>p
+				text-align center
+				padding .5rem 1rem
+				font-size 1.75rem
 			.actions
 				padding .5rem
 				.actions__title
@@ -54,8 +67,8 @@
 					font-size 1rem
 					text-transform uppercase
 				.actions__social
-					padding 0 .5rem
-					padding-top 1rem
+					padding .5rem
+					// padding-top 1rem
 					display flex
 					justify-content space-between
 					align-items center
@@ -81,7 +94,54 @@
 					display flex
 					flex-wrap wrap
 
+	&__social
+		display table
+		margin auto
+		padding .5rem 1rem 1.5rem 1rem
+		// padding 1rem
+
+	&__manifest
+		font-family: "Roboto Condensed";
+		font-weight: 300;
+		letter-spacing: 1px;
+		font-size: .9rem;
+		padding .5rem .75rem
+		.title
+			color: #585858;
+			font-weight 600
+			// margin-tpo 1rem
+			text-transform: uppercase;
+			margin-top 1rem
+			font-size 1.15rem
+		p
+			padding .25rem
+		.people
+			display flex
+			flex-wrap wrap
+			// justify-content center
+			// padding 0 .4rem
+			// padding-bottom .5rem
+			padding .25rem 0
+			.people-item
+				// padding .1rem
+				padding .25rem
+				img
+					width 2.25rem
+					height 2.25rem
+					border-radius 50%
+
+	&__more
+		margin 3rem 0
+		background #f6f6f6
+		overflow: hidden;
+
+	&__menu
+		display: flex;
+		padding: 0.5rem;
+		justify-content: flex-end;
+
 	&__similar
+		padding .5rem 0
 		.actions-title
 			color #444
 			font-family 'Roboto Condensed'
@@ -94,6 +154,12 @@
 .more-image
 	flex 1 50%
 	padding .5rem
+
+
+.double-columns
+	background #f6f6f6
+	padding: .5rem 0;
+
 
 @media (min-width: 400px)
 	.more-image
@@ -119,3 +185,13 @@
 					margin .5rem 1rem
 	.more-image
 		flex 1 50%
+
+	.double-columns
+		display flex
+		justify-content space-between
+		align-items center
+
+	.my-row
+		display flex
+		.my-column
+			flex 1
